Avoid line breaks in top. ("Speelt nu")
git-svn-id: svn://svn.code.sf.net/p/subsonic/code/trunk@3766 104adb81-38d2-4886-885e-82898e39ce25

--- a/subsonic-main/src/main/webapp/style/default.css
+++ b/subsonic-main/src/main/webapp/style/default.css
@@ -209,6 +209,7 @@ img {
     padding: 0.15em 0 0 0;
     margin: 0;
     border: 0;
+    white-space: nowrap;
 }
 
 .back, .forward {
